fix alignment of text/app-name in tabs relativ to app-icon

--- a/pixelegg/less/layout_raster_main.less
+++ b/pixelegg/less/layout_raster_main.less
@@ -129,7 +129,7 @@
 					.fontsize_m;
 					line-height: 1em;
 					margin:0 15px 2px 2px;
-					vertical-align: super;
+					vertical-align: text-top;
 				}
 
 				// Images
